# MirrorVerse

./: .gitignore  Cargo.toml  README.md  flake.nix  random.json
assets/: complex_3d.json  cylinder.json  diamond_of_hell.json  edge.json  loop_detection_test.json  random.json  random_100_3d.json  simple.json  simple_2dsphere.json  simple_3d.json  simple_paraboloid.json  simple_sphere3d.json
gen_rand_sim/: Cargo.toml
gen_rand_sim/src/: main.rs
generate_random_simulation/: Cargo.toml
generate_random_simulation_3d/: Cargo.toml
generate_random_simulation_3d/src/: main.rs
mirror_verse/: Cargo.toml
mirror_verse/src/: lib.rs  mirror.rs  render.rs
mirror_verse_json/: Cargo.toml
mirror_verse_json/src/: main.rs
mirror_verse_ui/: README.md  pubspec.yaml
mirror_verse_ui/assets/: gen_rand_sim
mirror_verse_ui/lib/: functions.dart  main.dart  new_generation.dart
mirror_verse_ui/linux/: CMakeLists.txt  my_application.cc
mirror_verse_ui/test/: widget_test.dart
mirror_verse_ui/windows/: CMakeLists.txt
project_managment/: MATH-INFO_01-mirror-verse.odp  presentation1.odp  presentation_text.md  specifications.md
project_managment/pres2/: .~lock.MATH-INFO_01-rapport-mirror-verse.odt#  MATH-INFO_01-Présentation-mirror-verse.odp  MATH-INFO_01-cahierdescharges-mirror-verse.md  MATH-INFO_01-mirror-verse.odp  (+1 more)
run_sim_json/: Cargo.toml
run_simulation_json/: Cargo.toml
run_simulation_json_3d/: Cargo.toml
src/: bezier_mirror.rs  camera.rs  cubic_bezier_mirror.rs  main.rs  mirror.rs  ray.rs  render.rs  shader.wgsl  state.rs  structs.rs
src/mirror/: bezier.rs  (+5 more)
(+19 files in other folders)
