[package]
name = "mirror_verse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
nalgebra = "0.32.3"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
serde = "1.0.195"
serde_json = "1.0.111"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18.0"
rand = "0.8.5"
gnuplot = "0.0.43"
downcast-rs = "1.2.0"
